PE/ch11/11.7/err.txt
In file included from complex0.cpp:2:0:
complex0.h: In function ‘std::ostream& operator<<(std::ostream&, complex&)’:
complex0.h:7:16: error: ‘double complex::real’ is private
         double real;
                ^
complex0.cpp:63:20: error: within this context
     os << "(" << c.real << "," << c.imag << "i)";
                    ^
In file included from complex0.cpp:2:0:
complex0.h:8:16: error: ‘double complex::imag’ is private
         double imag;
                ^
complex0.cpp:63:37: error: within this context
     os << "(" << c.real << "," << c.imag << "i)";
                                     ^
